syntax = "proto3";

package rest;

option go_package = ".;rest";

// 用户注册请求
message RegisterRequest {
  string username = 1;
  string password = 2;
  string email = 3;
  string nickname = 4;
}

// 用户注册响应
message RegisterResponse {
  bool success = 1;
  string message = 2;
  UserInfo user = 3;
  string token = 4;
}

// 用户信息
message UserInfo {
  int64 id = 1;
  string username = 2;
  string email = 3;
  string nickname = 4;
  string avatar = 5;
  int32 status = 6;
  int64 created_at = 7;
  int64 updated_at = 8;
}

// 用户登录请求
message LoginRequest {
  string username = 1;
  string password = 2;
  string device_id = 3; // 新增：多端登录设备标识
}

// 用户登录响应
message LoginResponse {
  bool success = 1;
  string message = 2;
  UserInfo user = 3;
  string token = 4;
  int64 expire_at = 5;
  string device_id = 6; // 新增：返回设备标识
}

// 获取用户请求
message GetUserRequest {
  int64 user_id = 1;
}

// 获取用户响应
message GetUserResponse {
  bool success = 1;
  string message = 2;
  UserInfo user = 3;
}

// 更新用户请求
message UpdateUserRequest {
  int64 user_id = 1;
  string nickname = 2;
  string avatar = 3;
  string email = 4;
}

// 更新用户响应
message UpdateUserResponse {
  bool success = 1;
  string message = 2;
  UserInfo user = 3;
}

// 删除用户请求
message DeleteUserRequest {
  int64 user_id = 1;
}

// 删除用户响应
message DeleteUserResponse {
  bool success = 1;
  string message = 2;
}

// 用户列表请求
message ListUsersRequest {
  int32 page = 1;
  int32 page_size = 2;
}

// 用户列表响应
message ListUsersResponse {
  bool success = 1;
  string message = 2;
  repeated UserInfo users = 3;
  int32 total = 4;
  int32 page = 5;
  int32 page_size = 6;
}

// 修改密码请求
message ChangePasswordRequest {
  int64 user_id = 1;
  string old_password = 2;
  string new_password = 3;
}

// 修改密码响应
message ChangePasswordResponse {
  bool success = 1;
  string message = 2;
}

// 上传头像请求
message UploadAvatarRequest {
  int64 user_id = 1;
  bytes avatar_data = 2;
}

// 上传头像响应
message UploadAvatarResponse {
  bool success = 1;
  string message = 2;
  string avatar_url = 3;
}